ミス入れ忘れ

--- a/html/fourth.html
+++ b/html/fourth.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="/default.css"  />
 </head>
 <body>
-鬼ヶ島で桃太郎は鬼達と対決するが、犬、雉、猿の必死の活躍があり、勝利した。無事困っていた人たちに報告し、生まれた村に帰っていった。<br>
+鬼ヶ島で桃太郎は鬼達と対決するが、犬、竜、猿の必死の活躍があり、勝利した。無事困っていた人たちに報告し、生まれた村に帰っていった。<br>
 <a href="end.html">end</a>
 </body>
 </html>
