--- a/html/first.html
+++ b/html/first.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="/default.css"  />
 </head>
 <body>
-<p>老夫婦が川で拾った桃から子供が生まれて、桃太郎と名付けられ大きく育った。</p>
+<p>老夫婦が川で拾ったドリアンから子供が生まれて、桃太郎と名付けられ大きく育った。</p>
 <a href="second.html">鬼退治の決意へ &gt;<a>
 </body>
 </html>
