--- a/html/second.html
+++ b/html/second.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="/default.css"  />
 </head>
 <body>
-<a href="third.html">桃太郎は旅人から鬼ヶ島に住む鬼に困っている鬼の話を聞き、退治するのをやめました。</a>
+桃太郎は旅人から鬼ヶ島に住む鬼に困っているひとの話を聞き、退治を決意した。
+<a href="third.html">＞thirdに続く</a>
 </body>
 </html>
