--- a/html/second.html
+++ b/html/second.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="/default.css"  />
 </head>
 <body>
-桃太郎は旅人から鬼ヶ島に住む鬼に困っているひとの話を聞き、退治を決意した。
+<p>桃太郎は旅人から鬼ヶ島に住む鬼に困っているひとの話を聞き、退治を決意した。</p>
 <a href="third.html">＞thirdに続く</a>
 </body>
 </html>
