しじみは留守番

--- a/html/third.html
+++ b/html/third.html
@@ -9,6 +9,6 @@
 <link rel="stylesheet" type="text/css" href="/default.css"  />
 </head>
 <body>
-桃太郎は鬼退治に出発、道中であった犬、雉、猿、しじみをきびだんごと引換に家来にし、ついには鬼ヶ島に到着する。
+桃太郎は鬼退治に出発、道中であった犬、雉、猿をきびだんごと引換に家来にし、ついには鬼ヶ島に到着する。
 </body>
 </html>
