--- a/html/first.html
+++ b/html/first.html
@@ -10,6 +10,6 @@
 </head>
 <body>
 <p>老夫婦が川で拾った桃から子供が生まれて、桃太郎と名付けられ大きく育った。</p>
-<a href="second.html">鬼退治の決意へ &gt;</a>
+<a href="second.html">鬼退治の決意へ &gt;<a>
 </body>
 </html>
