３話の話を拡充した

--- a/html/third.html
+++ b/html/third.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 桃太郎は鬼退治に出発、道中であった犬、雉、猿をきびだんごと引換に家来にし、ついには鬼ヶ島に到着する。
+（あれ？なんかくせーな？猿？あ、猿か。なんなんだよこいつ、風呂入ってんのかよ。。最悪だよマジでもう。。）
 <a href="fourth.html">鬼達との対決</a>
 </body>
 </html>
