--- a/html/first.html
+++ b/html/first.html
@@ -9,7 +9,14 @@
 <link rel="stylesheet" type="text/css" href="/default.css"  />
 </head>
 <body>
-<p>老夫婦が川で拾った桃から子供が生まれて、桃太郎と名付けられ大きく育った。</p>
+
+<h1>桃太郎誕生</h1>
+<p>昔々あるところに老夫婦が住んでいました。<br>
+あるとき、おばあさんが川で洗濯をしていたときに大きな桃を拾いました。<br>
+おじいさんの帰ってから、桃を切ろうとすると、中から元気な男の子が飛び出しました。<br>
+老夫婦は、男の子に「桃太郎」と名付け、大切に育てました。</p>
+
 <a href="second.html">鬼退治の決意へ &gt;</a>
+
 </body>
 </html>
