--- a/html/second.html
+++ b/html/second.html
@@ -9,8 +9,8 @@
 <link rel="stylesheet" type="text/css" href="/default.css"  />
 </head>
 <body>
-<p>あるとき、桃太郎は、村に通りがかった旅人から、街道の先にある村で鬼が乱暴狼藉がひどく困っていることを聞きました。</p>
-<p>桃太郎は老夫婦の教育の賜物か、正義感強く育ったので、見過ごすことができなくなり、退治に向かうことを決意しました。</p>
+<p>あるとき、バナナ太郎は、村に通りがかった旅人から、街道の先にある村で鬼が乱暴狼藉がひどく困っていることを聞きました。</p>
+<p>バナナ太郎は老夫婦の教育の賜物か、正義感強く育ったので、見過ごすことができなくなり、退治に向かうことを決意しました。</p>
 <a href="third.html">＞thirdに続く</a>
 </body>
 </html>
