--- a/html/fourth.html
+++ b/html/fourth.html
@@ -9,13 +9,13 @@
 <link rel="stylesheet" type="text/css" href="/default.css"  />
 </head>
 <body>
-鬼ヶ島で桃太郎は鬼達と対決するが、犬、雉、猿の必死の活躍があり、勝利した。無事困っていた人たちに報告し、生まれた村に帰っていった。<br>
+鬼ヶ島で桃太郎は鬼達と対決するが、犬、雉、チンパンジーの必死の活躍があり、勝利した。無事困っていた人たちに報告し、生まれた村に帰っていった。<br>
 
 <br>
-鬼ヶ島で桃太郎は鬼達と対決するが、犬、雉、猿の必死の活躍があり、勝利した。無事困っていた人たちに報告し、生まれた村に帰っていった。<br>
-鬼ヶ島が見えてくると、桃太郎は櫂を漕いでいる猿に、ぐるりと島を回るように命じました。<br>
+鬼ヶ島で桃太郎は鬼達と対決するが、犬、雉、チンパンジーの必死の活躍があり、勝利した。無事困っていた人たちに報告し、生まれた村に帰っていった。<br>
+鬼ヶ島が見えてくると、桃太郎は櫂を漕いでいるチンパンジーに、ぐるりと島を回るように命じました。<br>
 上陸しやすいところは鬼が見張りを立てていると踏んだのです。 半周ほど回ったところでしょうか。急峻な崖でとても上陸できそうもないところがみつかりました。<br>
-雉を偵察に出し、鬼が見張っていないことを確認したところで、猿に長い縄を持たせて、崖を登らせ、上にある太い木に結ばせました。<br>
+雉を偵察に出し、鬼が見張っていないことを確認したところで、チンパンジーに長い縄を持たせて、崖を登らせ、上にある太い木に結ばせました。<br>
 桃太郎は縄を掴むことのできない犬を背中に背負い、登ってゆきました。<br>
 崖の上は、ちょうど鬼の住む城の真裏。桃太郎は夜まで待ち、夜襲をかけることにしました。<br>
 夜になると、犬が酒の臭いがする、と桃太郎に伝えてきました。<br>
