--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="/default.css"  />
 </head>
 <body>
-バナナ太郎<br>
+<font color="#FFCC00">バナナ太郎</font><br>
 <a href="first.html">次へ</a>
 </body>
 </html>
