--- a/html/fourth.html
+++ b/html/fourth.html
@@ -9,10 +9,10 @@
 <link rel="stylesheet" type="text/css" href="/default.css"  />
 </head>
 <body>
-鬼ヶ島で<font color="#FFCC00">バナナ太郎</font>は鬼達と対決するが、<font color="#666666">バナナ太郎</font>、<font color="pink">ダチョウ</font>、チンパンジーの必死の活躍があり、勝利した。無事困っていた人たちに報告し、生まれた町に帰っていった。<br>
-鬼ヶ島が見えてくると、<font color="#FFCC00">バナナ太郎</font>は櫂を漕いでいるチンパンジーに、ぐるりと島を回るように命じました。<br>
+鬼ヶ島で<font color="#FFCC00">バナナ太郎</font>は鬼達と対決するが、<font color="#666666">バナナ太郎</font>、<font color="pink">ダチョウ</font>、<font color="orange">チンパンジー</font>の必死の活躍があり、勝利した。無事困っていた人たちに報告し、生まれた町に帰っていった。<br>
+鬼ヶ島が見えてくると、<font color="#FFCC00">バナナ太郎</font>は櫂を漕いでいる<font color="orange">チンパンジー</font>に、ぐるりと島を回るように命じました。<br>
 上陸しやすいところは鬼が見張りを立てていると踏んだのです。 半周ほど回ったところでしょうか。急峻な崖でとても上陸できそうもないところがみつかりました。<br>
-雉を偵察に出し、鬼が見張っていないことを確認したところで、チンパンジーに長い縄を持たせて、崖を登らせ、上にある太い木に結ばせました。<br>
+雉を偵察に出し、鬼が見張っていないことを確認したところで、<font color="orange">チンパンジー</font>に長い縄を持たせて、崖を登らせ、上にある太い木に結ばせました。<br>
 <font color="#FFCC00">バナナ太郎</font>は縄を掴むことのできない<font color="#666666">バナナ太郎</font>を背中に背負い、登ってゆきました。<br>
 崖の上は、ちょうど鬼の住む城の真裏。<font color="#FFCC00">バナナ太郎</font>は夜まで待ち、夜襲をかけることにしました。<br>
 夜になると、<font color="#666666">バナナ太郎</font>が酒の臭いがする、と<font color="#FFCC00">バナナ太郎</font>に伝えてきました。<br>
