--- a/html/third.html
+++ b/html/third.html
@@ -9,8 +9,8 @@
 <link rel="stylesheet" type="text/css" href="/default.css"  />
 </head>
 <body>
-<font color="#FFCC00">バナナ太郎</font>は鬼退治に出発、道中であった<font color="#666666">バナナ太郎</font>、<font color="pink">ダチョウ</font>、チンパンジーをきびだんごと引換に家来にし、ついには鬼ヶ島に到着する。
-（あれ？なんかくせーな？チンパンジー？あ、チンパンジーか。なんなんだよこいつ、風呂入ってんのかよ。。最悪だよマジでもう。。）
+<font color="#FFCC00">バナナ太郎</font>は鬼退治に出発、道中であった<font color="#666666">バナナ太郎</font>、<font color="pink">ダチョウ</font>、<font color="orange">チンパンジー</font>をきびだんごと引換に家来にし、ついには鬼ヶ島に到着する。
+（あれ？なんかくせーな？<font color="orange">チンパンジー</font>？あ、<font color="orange">チンパンジー</font>か。なんなんだよこいつ、風呂入ってんのかよ。。最悪だよマジでもう。。）
 <a href="fourth.html">鬼達との対決</a>
 </body>
 </html>
