桃をバナナに修正

--- a/html/first.html
+++ b/html/first.html
@@ -12,8 +12,8 @@
 
 <h1><font color="#fc0">バナナ太郎</font>誕生</h1>
 <p>昔々あるところに老夫婦が住んでいました。<br>
-あるとき、<b style="color:#A8ADCC;">おばあさん</b>が川で洗濯をしていたときに大きな桃を拾いました。<br>
-<b style="color:#B8883B;">おじいさん</b>の帰ってから、桃を切ろうとすると、中から元気な男の子が飛び出しました。<br>
+あるとき、<b style="color:#A8ADCC;">おばあさん</b>が川で洗濯をしていたときに大きなバナナを拾いました。<br>
+<b style="color:#B8883B;">おじいさん</b>の帰ってから、バナナを切ろうとすると、中から元気な男の子が飛び出しました。<br>
 老夫婦は、男の子に「<font color="#fc0">バナナ太郎</font>」と名付け、大切に育てました。</p>
 
 
